[package]
name = "tiger-parse"
version = "0.5.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiger-pkg = { version = "0.18", optional = true }
tracing = { version = "0.1", optional = true }
glam = { version = ">0.29.0" }
tiger-parse-derive = { path = "./tiger-parse-derive" }
thiserror = "1"
disqualified = "1.0.0"
paste = "1.0.15"
linkme = { version = "0.3.0", optional = true }


[features]
default = ["check_types"]

32bit = []
check_types = []
# Check types in strict mode. 0xFFFFFFFF are not allowed in strict mode.
check_types_strict = []
tiger_pkg = ["dep:tiger-pkg"]
check_types_debug = ["dep:tracing"]
reflect = ["dep:linkme", "tiger-parse-derive/reflect"]

[dev-dependencies]
chroma-dbg = "0.1.1"
