[package]
name = "tiger-parse"
version = "0.6.0"
edition = "2021"

[dependencies]
disqualified = "1"
glam = { version = "0.29" }
paste = "1"
thiserror = "1"
tiger-parse-derive = { path = "./tiger-parse-derive" }

linkme = { version = "0.3", optional = true }
tiger-pkg = { version = "0.18", optional = false }
tracing = { version = "0.1", optional = true }

[features]
default = ["check_types"]

32bit = []
check_types = []
# Check types in strict mode. 0xFFFFFFFF are not allowed in strict mode.
check_types_strict = []
# tiger_pkg = ["dep:tiger-pkg"]
check_types_debug = ["dep:tracing"]
reflect = ["dep:linkme", "tiger-parse-derive/reflect"]

[dev-dependencies]
chroma-dbg = "0.1.1"
