[package]
name = "tiger-parse"
version = "0.7.0"
edition = "2021"
license = "MIT"

[dependencies]
disqualified = "1"
glam = { version = "0.29" }
paste = "1"
thiserror = "1"
tiger-parse-derive = { path = "./tiger-parse-derive" }

linkme = { version = "0.3", optional = true }
tiger-pkg = { version = "0.18", optional = true }
tracing = { version = "0.1", optional = true }

[features]
default = ["check_types"]

32bit = []
check_types = []
# Check types in strict mode. 0xFFFFFFFF is not allowed in strict mode.
check_types_strict = []
tiger_pkg = ["dep:tiger-pkg"]
check_types_debug = ["dep:tracing"]
reflect = ["dep:linkme", "tiger-parse-derive/reflect"]

[dev-dependencies]
bitflags = { version = "2.9.4" }
chroma-dbg = "0.1.1"
